--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -1,26 +1,27 @@
 {
   "@@locale": "hi",
-  "error": "Error",
+  "error": "एक त्रुटि हुई",
   "question": "प्रश्न",
   "quiz": "प्रश्नोत्तरी",
-  "python": "Python",
-  "java": "Java",
-  "javaScript": "JavaScript",
-  "dart": "Dart",
+  "python": "पाइथन",
+  "java": "जावा",
+  "javaScript": "जावास्क्रिप्ट",
+  "dart": "डार्ट",
   "selectLanguage": "प्रोग्रामिंग भाषा चुनें",
   "selectLevel": "अपना स्तर चुनें",
-  "infoDart": "Dart एक आधुनिक तेज़ भाषा है जो Flutter विकास के लिए उपयोग की जाती है।",
-  "infoJava": "Java दुनिया की सबसे अधिक उपयोग की जाने वाली प्रोग्रामिंग भाषाओं में से एक है।",
-  "infoJS": "JavaScript इंटरैक्टिव वेब विकास के लिए उपयोग किया जाता है।",
-  "infoPython": "Python डेटा विश्लेषण, एआई, रोबोटिक्स आदि में व्यापक रूप से उपयोग होता है।",
-  "levelJunior": "Junior",
-  "levelMiddle": "Middle",
-  "levelSenior": "Senior",
+  "levelJunior": "जूनियर",
+  "levelMiddle": "मिडिल",
+  "levelSenior": "सीनियर",
+  "infoDart": "Dart — Flutter विकास के लिए एक आधुनिक और तेज़ प्रोग्रामिंग भाषा है।",
+  "infoJava": "Java — दुनिया की सबसे अधिक उपयोग की जाने वाली प्रोग्रामिंग भाषाओं में से एक है।",
+  "infoJavaScript": "JavaScript — वेब के लिए एक इंटरएक्टिव प्रोग्रामिंग भाषा है।",
+  "infoPython": "Python — डेटा विश्लेषण, आर्टिफिशियल इंटेलिजेंस और रोबोटिक्स के क्षेत्रों में व्यापक रूप से उपयोग की जाती है।",
   "resultPage": "परिणाम देखें",
   "correct": "सही",
   "wrong": "गलत",
   "result": "आपका परिणाम",
-  "info": "और पढ़ने के लिए",
-  "withAi": "एआई के साथ प्रश्न"
-
+  "info": "और पढ़ें",
+  "withAi": "AI द्वारा उत्पन्न प्रश्न",
+  "networkError": "ऐसा लगता है कि आपके पास इंटरनेट कनेक्शन नहीं है, कृपया नेटवर्क जांचें।",
+  "reload": "इंटरनेट कनेक्शन जांचें"
 }
