--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "ru",
-  "error": "Error",
+  "error": "Произошла ошибка",
   "question": "Вопрос",
   "quiz": "Викторина",
   "python": "Python",
@@ -8,21 +8,20 @@
   "javaScript": "JavaScript",
   "dart": "Dart",
   "selectLanguage": "Выберите язык программирования",
-  "selectLevel": "Выберите свой уровень",
-  "infoDart": "Dart — это современный быстрый язык для разработки на Flutter.",
-  "infoJava": "Java — один из самых популярных языков программирования в мире.",
-  "infoJS": "JavaScript используется для создания интерактивных веб-приложений.",
-  "infoPython": "Python широко используется в аналитике данных, ИИ, робототехнике и др.",
+  "selectLevel": "Выберите ваш уровень",
   "levelJunior": "Junior",
   "levelMiddle": "Middle",
   "levelSenior": "Senior",
-  "resultPage":"Посмотреть результаты",
-  "correct": "Правильный ",
-  "wrong": "Неправильно ",
+  "infoDart": "Dart — современный и быстрый язык программирования для разработки на Flutter.",
+  "infoJava": "Java — один из самых популярных языков программирования в мире.",
+  "infoJavaScript": "JavaScript — интерактивный язык программирования для веба.",
+  "infoPython": "Python широко используется для анализа данных, искусственного интеллекта и робототехники.",
+  "resultPage": "Посмотреть результаты",
+  "correct": "Правильно",
+  "wrong": "Неправильно",
   "result": "Ваш результат",
-  "info": "Подробнее читайте",
-  "withAi": "Вопросы с ИИ"
-
-
-
+  "info": "Читать подробнее",
+  "withAi": "Вопросы, сгенерированные ИИ",
+  "networkError": "Похоже, у вас нет подключения к интернету, пожалуйста, проверьте сеть.",
+  "reload": "Проверить подключение к интернету"
 }
