--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -1,27 +1,27 @@
 {
   "@@locale": "zh",
-  "error": "Error",
-
+  "error": "发生错误",
   "question": "问题",
   "quiz": "测验",
   "python": "Python",
   "java": "Java",
   "javaScript": "JavaScript",
   "dart": "Dart",
-  "selectLanguage": "请选择编程语言",
-  "selectLevel": "请选择您的级别",
-  "infoDart": "Dart 是用于 Flutter 开发的现代快速语言。",
+  "selectLanguage": "选择一种编程语言",
+  "selectLevel": "选择您的级别",
+  "levelJunior": "初级",
+  "levelMiddle": "中级",
+  "levelSenior": "高级",
+  "infoDart": "Dart 是一种用于 Flutter 开发的现代且快速的编程语言。",
   "infoJava": "Java 是世界上最常用的编程语言之一。",
-  "infoJS": "JavaScript 用于网页的交互开发。",
-  "infoPython": "Python 广泛应用于数据分析、人工智能、机器人等领域。",
-  "levelJunior": "Junior",
-  "levelMiddle": "Middle",
-  "levelSenior": "Senior",
-  "resultPage":"查看結果",
-  "correct": "正確的",
-  "wrong": "錯誤的",
-  "result": "你的结果",
+  "infoJavaScript": "JavaScript 是一种用于网页的交互式编程语言。",
+  "infoPython": "Python 广泛应用于数据分析、人工智能和机器人技术等领域。",
+  "resultPage": "查看结果",
+  "correct": "正确",
+  "wrong": "错误",
+  "result": "您的结果",
   "info": "阅读更多",
-  "withAi": "通过人工智能提问"
-
+  "withAi": "由 AI 生成的问题",
+  "networkError": "您似乎没有互联网连接，请检查您的网络。",
+  "reload": "检查网络连接"
 }
