--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -21,6 +21,7 @@
   "wrong": "Incorrect",
   "result": "Your result",
   "info": "Read more",
-  "withAi": "Questions generated with AI"
-
+  "withAi": "Questions generated with AI",
+  "networkError": "It seems you don't have an internet connection, please check your network.",
+  "reload": "Check Internet Connection"
 }
